src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@ws1-out1-fsT-wfsAU-spA1.snap
---
source: src/tests/window_opening.rs
description: "open on workspace: ws-1\nopen on output: headless-1\nopen fullscreen: true\nwant fullscreen: AU\nset parent: A1"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 0 × 0, bounds: 1280 × 720, states: []
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
